2003-08-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* buildc.t, buildrt.t, nt.t, sample.t, tversions.texi:
	Don't use VARIABLEs containing '-' in @set and @value (violates
	texi-syntax).

2003-08-22	Joel Sherrill <joel@OARcorp.com>

	PR 469/doc
	* buildc.t: Clarifying text on patch file to account for various ways
	they could be compressed or not.

2003-08-22	Joel Sherrill <joel@OARcorp.com>

	* tversions.texi: Correcting version information.

2003-04-18	Joel Sherrill <joel@OARcorp.com>

	* tversions.texi: Updated to reflect gcc3.2.2newlib1.11.0-2.

2003-02-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* buildc.t: Add several @ifset BUILDTOOLS-TAR.
	* sample.t: Use @code{make/README} instead of
	@code{@value{RTEMS-UNTAR}/make/README} (Workaround to PR 345).

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* tversions.texi: Updated tool version numbers.

2003-01-25	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* started.texi: Set @setfilename started.info.

2003-01-24	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Put GENERATED_FILES into $builddir.

2003-01-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* version.texi: Remove from CVS.
	* stamp-vti: Remove from CVS.
	* .cvsignore: Add version.texi.
	Add stamp-vti.
	Re-sort.

2003-01-21	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-11-13	Joel Sherrill <joel@OARcorp.com>

	* Makefile.am, buildc.t, buildrt.t, nt.t, require.t, tversions.texi:
	Removed all references to bit scripts.
	* gdb.t: Removed.

2002-11-13	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2002-10-24	Joel Sherrill <joel@OARcorp.com>

	* stamp-vti, version.texi: Regenerated.

2001-06-28	Joel Sherrill <joel@OARcorp.com>

	* tverstions.texi: Updated to reflect newer versions.

2001-06-28	Joel Sherrill <joel@OARcorp.com>

	* buildc.t, gdb.t: Per PR54, updated to reflect multiple compression
	schemes including bzip2.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
